Follow brand usage guidelines

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ footer{font-size:.875rem;text-align:center;margin:4rem 0;color:#AAA}
 </style>
 
 <section>
-  <h1>Generate tile-perfect PBR textures directly in Unity— 100% offline, on your GPU</h1>
+  <h1>Generate tile-perfect PBR textures directly in the Unity editor— 100% offline, on your GPU</h1>
   <p>Seamless AI lets you turn a prompt into production-ready albedo, normal, roughness, and metallic maps in seconds—no API keys, no cloud fees.</p>
 
   <form id="signup" method="post">
