--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <meta charset="utf-8">
 <title>Seamless AI Texture Generator [Offline]</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TSFD6M5C');</script>
+<!-- End Google Tag Manager -->
 <style>
 :root{
   --brand:#00C3FF;
@@ -42,6 +49,11 @@ footer{font-size:.875rem;text-align:center;margin:4rem 0;color:#AAA}
   box-shadow:0 2px 6px rgba(0,0,0,.2);
 }
 </style>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TSFD6M5C"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <section>
   <h1>Generate tile-perfect PBR textures directly in the Unity editor— 100% offline, on your GPU</h1>
