Form submission fix

--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@ footer{font-size:.875rem;text-align:center;margin:4rem 0;color:#AAA}
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
+<!-- Customer.io -->
+<script type="text/javascript">
+  (function() {
+    var t = document.createElement('script'),
+        s = document.getElementsByTagName('script')[0];
+    t.async = true;
+    t.id    = 'cio-forms-handler';
+    t.setAttribute('data-site-id', 'a5332403a82052a76821');
+    t.setAttribute('data-base-url', 'https://customerioforms.com');
+
+    t.src = 'https://customerioforms.com/assets/forms.js';
+
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
+<!-- End Customer.io -->
+
 <section>
   <h1>Generate tile-perfect PBR textures directly in the Unity editor— 100% offline, on your GPU</h1>
   <p>Seamless AI lets you turn a prompt into production-ready albedo, normal, roughness, and metallic maps in seconds—no API keys, no cloud fees.</p>
@@ -69,7 +86,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 <footer>© 2025 Seamless AI. All trademarks are property of their respective owners.</footer>
-
-<!-- Customer.io Connected Forms -->
-<script data-site-id="a5332403a82052a76821" src="https://customer.io/forms.js" async></script>
 </html>
