--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h1>Generate tile-perfect PBR textures directly in the Unity editor— 100% offline, on your GPU</h1>
   <p>Seamless AI lets you turn a prompt into production-ready albedo, normal, roughness, and metallic maps in seconds—no API keys, no cloud fees.</p>
 
-  <form id="signup" method="post">
+  <form id="signup"
+    method="post"
+    action="https://customerioforms.com/forms/submit_action?site_id=a5332403a82052a76821&form_id=signup&success_url=https://seamlessai.art/thanks.html"
+    data-site-id="a5332403a82052a76821"
+    data-form-id="signup"
+  >
     <label for="email">Join the private beta 👇</label><br>
     <input id="email" name="email" type="email" required placeholder="you@example.com"
            style="padding:.75rem 1rem;width:60%;max-width:280px;border:1px solid #CCC;border-radius:var(--radius);margin:.5rem 0">
