--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Customer.io -->
 
 <section>
+  <img src="/hero.jpg" alt="Offline AI Texture Generation in Unity" style="width:100%;max-width:1200px;display:block;margin:0 auto 2rem">
+
   <h1>Generate tile-perfect PBR textures directly in the Unity editor— 100% offline, on your GPU</h1>
   <p>Seamless AI lets you turn a prompt into production-ready albedo, normal, roughness, and metallic maps in seconds—no API keys, no cloud fees.</p>
 
