--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@ a.btn{display:inline-block;background:var(--brand);color:#000;padding:0.75rem 1.
 section{max-width:720px;margin:5vh auto;padding:2rem;background:var(--card);color:#111;border-radius:var(--radius);box-shadow:0 4px 12px rgba(0,0,0,.2)}
 footer{font-size:.875rem;text-align:center;margin:4rem 0;color:#AAA}
 
+#hero{
+  max-width: 1200px;
+  display: block;
+  margin: 2rem auto 2rem;
+  max-height: 60vh;
+}
+
 .btn{
   background:linear-gradient(135deg,var(--brand) 0%,#37d4ff 100%);
   color:#000;
@@ -72,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 <!-- End Customer.io -->
 
-<img src="/hero.jpg" alt="Offline AI Texture Generation in Unity" style="width:100%;max-width:1200px;display:block;margin:0 auto 2rem">
+<img id="hero" src="/hero.jpg" alt="Offline AI Texture Generation in Unity">
 
 <section>
   <h1>Generate tile-perfect PBR textures directly in the Unity editor— 100% offline, on your GPU</h1>
