add GTM to thanks.html

--- a/thanks.html
+++ b/thanks.html
@@ -4,6 +4,13 @@
 <title>Thank You – Seamless AI Texture Generator</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta http-equiv="refresh" content="7; url=/">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TSFD6M5C');</script>
+<!-- End Google Tag Manager -->
 <style>
 :root{
   --brand:#00C3FF;
@@ -23,6 +30,11 @@ a.btn{background:linear-gradient(135deg,var(--brand) 0%,#37d4ff 100%);
 a.btn:hover{box-shadow:0 4px 12px rgba(0,0,0,.25);transform:translateY(-2px)}
 footer{font-size:.875rem;color:#AAA;margin-top:3rem}
 </style>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TSFD6M5C"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <main>
   <h1>🙌 Thanks for joining the beta!</h1>
